--- a/.github/workflows/project1_test.yml
+++ b/.github/workflows/project1_test.yml
@@ -3,9 +3,9 @@ name: project1_test
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -14,5 +14,5 @@ jobs:
     - uses: actions/checkout@v2.4.2
     - name: Use Node.js 
       uses: actions/setup-node@v3.3.0
-    - run: npm ci  
+    - run: npm install
     - run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadless
