--- a/.github/workflows/project1_test.yml
+++ b/.github/workflows/project1_test.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./project1
     steps:
     - uses: actions/checkout@v2.4.2
     - name: Use Node.js 
