finlize project 1 actions

--- a/.github/workflows/project1_test.yml
+++ b/.github/workflows/project1_test.yml
@@ -6,10 +6,11 @@ on:
     paths:
       - 'project1/**'
   pull_request:
-    branches: [ main ]
+    paths:
+      - 'project1/**'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     defaults:
       run:
