remove filters to see if it appear in status checks

--- a/.github/workflows/project1_test.yml
+++ b/.github/workflows/project1_test.yml
@@ -1,13 +1,9 @@
 name: project1_test
 
 on:
-  workflow_dispatch:
-  push:
-    paths:
-      - 'project1/**'
   pull_request:
-    paths:
-      - 'project1/**'
+    branches:
+      - main
 
 jobs:
   test:
