--- a/.github/workflows/project2_test.yml
+++ b/.github/workflows/project2_test.yml
@@ -1,13 +1,9 @@
 name: project2_test
 
 on:
-  workflow_dispatch:
-  push:
-    paths:
-      - 'project2/**'
   pull_request:
-    paths:
-      - 'project2/**'
+    branches:
+      - main
 
 jobs:
   anas:
