--- a/.github/workflows/project2_test.yml
+++ b/.github/workflows/project2_test.yml
@@ -1,12 +1,16 @@
 name: project2_test
 
 on:
+  workflow_dispatch:
+  push:
+    paths:
+      - 'project2/**'
   pull_request:
-    branches:
-      - main
+    paths:
+      - 'project2/**'
 
 jobs:
-  test-proj1:
+  test-proj2:
     runs-on: ubuntu-latest
     defaults:
       run:
