--- a/project1/package.json
+++ b/project1/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint:script": "git diff --name-only --diff-filter=ACMRTUXB main "
   },
   "private": true,
   "dependencies": {
