--- a/.github/workflows/lint_Changed_Files.yml
+++ b/.github/workflows/lint_Changed_Files.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/checkout@v2.4.2
     - name: Use Node.js 
       uses: actions/setup-node@v3.3.0
-    - run: git diff --name-only --diff-filter=ACMRTUXB 
+    - run: npm run lint:script
