--- a/.github/workflows/lint_Changed_Files.yml
+++ b/.github/workflows/lint_Changed_Files.yml
@@ -16,4 +16,5 @@ jobs:
     - uses: actions/checkout@v2.4.2
     - name: Use Node.js 
       uses: actions/setup-node@v3.3.0
+    - run: npm install -g eslint
     - run: npm run lint:script
